<resources>
    <string name="app_name">Individual2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="total">total</string>
    <string name="add">Add</string>
    <string name="successful_add">Arggg another drink</string>
</resources>