<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_normal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.listing.ListFragment">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/price"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvItemName"
            app:layout_constraintStart_toEndOf="@+id/tvItemName" />

        <TextView
            android:id="@+id/tvItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/quantity"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvItemPrice"
            app:layout_constraintStart_toEndOf="@+id/tvItemPrice" />

        <TextView
            android:id="@+id/tvItemTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/total"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvItemQuantity"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>