<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add.AddItemFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutItemQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutItemName"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutItemName"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutItemName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutItemQuantity"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutItemQuantity"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutItemQuantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutItemPrice"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutItemPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>